Issue #376: Added another div around the Content Page content so a scrollbar, if needed, can be positioned all the way to the right of the page.

--- a/infomapper/src/app/content-page/content-page.component.css
+++ b/infomapper/src/app/content-page/content-page.component.css
@@ -3,6 +3,11 @@
 
 /* CLASSES */
 
+.inner-container {
+  height: calc(100vh - 150px);
+  margin: 25px 20vw 0px 20vw;
+}
+
 .main-header-404 {
   margin-top: 2.5%;
   font-size:5rem !important;
@@ -23,8 +28,11 @@
 .showdown-container {
   /* vh is the percentage of the viewport (or the browser window size), so the height of the Showdown HTML should take
   up 90% of the height */
-  height: 85vh;
-  margin: 25px 20vw 0px 20vw;
+  height: 100%;
+  width: 100%;
+  margin-top: 25px;
+  /* height: 85vh; */
+  /* margin: 25px 20vw 0px 20vw; */
   /* If scrolling is not needed, (e.g. the size of the Showdown content is less than 85% of the content page) a scroll bar will
   not be shown. The scroll bar will be shown if it is */
   overflow: auto;
